RESOLVED FIXED146716
[EFL] When closing inspector window, EwkView is not released properly.
https://bugs.webkit.org/show_bug.cgi?id=146716
Summary [EFL] When closing inspector window, EwkView is not released properly.
Jinwoo Song
Reported 2015-07-08 01:02:35 PDT
When we close the inspector window, EwkView is not released with following messages. It's because inspector window could not be deleted by remaining references. ERR<8388>:evas_main lib/evas/canvas/evas_main.c:237 _evas_canvas_eo_base_destructor() obj(0x4a9bf20, EWK2_View) ref count(2) is bigger than 0. This object couldn't be deleted ERR<8388>:eo lib/eo/eo.c:1896 eo_manual_free() Tried deleting the object 0x800000b0c0000587 while still referenced(2). ERR<8388>:eo lib/eo/eo.c:1896 eo_manual_free() Tried deleting the object 0x800000b0e0000588 while still referenced(1). ERR<8388>:eo lib/eo/eo.c:1896 eo_manual_free() Tried deleting the object 0x800000b100000589 while still referenced(1).
Attachments
Patch (2.19 KB, patch)
2015-07-08 01:07 PDT, Jinwoo Song
no flags
Patch (2.21 KB, patch)
2015-07-08 22:36 PDT, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2015-07-08 01:07:44 PDT
Gyuyoung Kim
Comment 2 2015-07-08 21:56:30 PDT
Comment on attachment 256365 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=256365&action=review > Source/WebKit2/ChangeLog:9 > + from inspector view(evas object). This patch delete the inspector window s/delete/deletes/g
Jinwoo Song
Comment 3 2015-07-08 22:36:30 PDT
Comment on attachment 256365 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=256365&action=review >> Source/WebKit2/ChangeLog:9 >> + from inspector view(evas object). This patch delete the inspector window > > s/delete/deletes/g Fixed!
Jinwoo Song
Comment 4 2015-07-08 22:36:50 PDT
WebKit Commit Bot
Comment 5 2015-07-08 23:02:06 PDT
Comment on attachment 256459 [details] Patch Clearing flags on attachment: 256459 Committed r186583: <http://trac.webkit.org/changeset/186583>
WebKit Commit Bot
Comment 6 2015-07-08 23:02:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.