[EFL] When closing inspector window, EwkView is not released properly. https://bugs.webkit.org/show_bug.cgi?id=146716

Reviewed by Gyuyoung Kim.

It's because inspector window could not be deleted by remaining reference
from inspector view(evas object). This patch deletes the inspector window
after finishing the evas object smart call.

* UIProcess/efl/WebInspectorProxyEfl.cpp:
(WebKit::destroyInspectorWindow):
(WebKit::WebInspectorProxy::platformDidClose):


Canonical link: https://commits.webkit.org/164857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186583 268f45cc-cd09-0410-ab3c-d52691b4dbfc